# bbublegum-prince

./: Cargo.toml  index.html
notes/: big_picture  held_items
src/: camera.rs  ideas.rs  items.rs  main.rs  pickup.rs  player_movement.rs
src/environment/: chain.rs  mod.rs
src/player/: grabbing.rs  inputs.rs  mod.rs
src/player/movement/: components.rs  jumping.rs  locomotion.rs  mod.rs
src/ui/: mod.rs
