[package]
name = "bubblegum-prince"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.9.1"
bevy_editor_pls = "0.2.0"
bevy_rapier3d = "*"
bevy-inspector-egui-rapier = { version = "*", features=["rapier3d"]}
leafwing-input-manager = "*"
paste = "1.0.11"
