[package]
name = "bubblegum-prince"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.10"
bevy_rapier3d = "0.21.0"
leafwing-input-manager = "0.9"
paste = "1.0.11"
